[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Flame.png" type="Texture" id=4]
[ext_resource path="res://Particle Colour Gradient White.tres" type="Gradient" id=5]
[ext_resource path="res://Particle Colour Gradient Black.tres" type="Gradient" id=6]
[ext_resource path="res://spot.png" type="Texture" id=7]
[ext_resource path="res://music/slide.wav" type="AudioStream" id=8]
[ext_resource path="res://music/Switch.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.5, 64 )

[sub_resource type="OccluderPolygon2D" id=2]
cull_mode = 1
polygon = PoolVector2Array( -41, 65, -41, -64, 42, -64, 42, 64 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 600, 1300 )

[node name="Particles2D Black" type="CPUParticles2D" parent="."]
emitting = false
amount = 400
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 10, 35 )
direction = Vector2( 100, 0 )
spread = 0.0
gravity = Vector2( 0, 50 )
angular_velocity = 451.76
angular_velocity_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel_random = 1.0
scale_amount = 0.4
color_ramp = ExtResource( 6 )

[node name="Particles2D White" type="CPUParticles2D" parent="."]
emitting = false
amount = 400
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 10, 35 )
direction = Vector2( 100, 0 )
spread = 0.0
gravity = Vector2( 0, 50 )
angular_velocity = 451.76
angular_velocity_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel_random = 1.0
scale_amount = 0.4
color_ramp = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
rotating = true
current = true
zoom = Vector2( 1.3, 1.3 )
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Death_Timer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 32
occluder = SubResource( 2 )
light_mask = 32

[node name="Sprite" type="Sprite" parent="LightOccluder2D"]

[node name="Background White" type="CPUParticles2D" parent="."]
amount = 200
lifetime = 10.0
local_coords = false
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 1500, 1000 )
gravity = Vector2( 0, 20 )
initial_velocity = 60.87
initial_velocity_random = 0.47
radial_accel = -22.02
angle = -37.6
scale_amount = 0.05
scale_amount_random = 0.06

[node name="Background Black" type="CPUParticles2D" parent="."]
amount = 200
lifetime = 10.0
local_coords = false
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 1500, 1000 )
gravity = Vector2( 0, 20 )
initial_velocity = 60.87
initial_velocity_random = 0.47
radial_accel = -22.02
angle = -37.6
scale_amount = 0.05
scale_amount_random = 0.06
color = Color( 0, 0, 0, 1 )

[node name="Slide Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
stream_paused = true

[node name="Switch Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
stream_paused = true

[connection signal="timeout" from="Death_Timer" to="." method="_on_Timer_timeout"]
